force-app/main/default/objects/Event_Speaker__c/Event_Speaker__c.object-meta.xml
<CustomObject>
    <label>Event-Speaker</label>
    <nameField>
        <displayFormat>ES-{00}</displayFormat>
        <label>Speaker ticket</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events-Speakers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>