force-app/main/default/objects/Event_Speaker__c/fields/Is_Dupplicate__c.field-meta.xml
<CustomField>
    <fullName>Is_Dupplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dupplicate</label>
    <type>Checkbox</type>
</CustomField>