force-app/main/default/objects/Event_Speaker__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <referenceTo>Speaker__c</referenceTo>
    <relationshipLabel>Events-Speakers</relationshipLabel>
    <relationshipName>Events_Speakers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>