force-app/main/default/objects/Event_Speaker__c/validationRules/Duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate</fullName>
    <active>true</active>
    <errorConditionFormula>Is_Dupplicate__c  = true</errorConditionFormula>
    <errorDisplayField>Speaker__c</errorDisplayField>
    <errorMessage>Already booked cannot be created</errorMessage>
</ValidationRule>